kube_defaults.tf
resource "kubernetes_namespace" "app" {
  metadata {
    name = var.namespace
  }
}
